# SocialNetAnalysis

./: .gitignore  README.md  main.py  pyproject.toml
doc/: reference.md
ipynb/: datafeel.ipynb  hat1.ipynb
source/: data.py  model.py
src/: data.py  data_plus.py  model.py  train.py
