[tool.poetry]
name = "socialnetanalysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = {version = "^2.5.1+cu124", source = "pytorch_cu124"}
pyg-lib = {version = "^0.4.0+pt25cu124", source = "pyg_cu124"}
torch-scatter = {version = "^2.1.2+pt25cu124", source = "pyg_cu124"}
torch-sparse = {version = "^0.6.18+pt25cu124", source = "pyg_cu124"}
torch-cluster = {version = "^1.6.3+pt25cu124", source = "pyg_cu124"}
torch-spline-conv = {version = "^1.2.2+pt25cu124", source = "pyg_cu124"}
torch-geometric = "^2.6.1"
pandas = "^2.2.3"
matplotlib = "^3.9.3"


[[tool.poetry.source]]
name = "pytorch_cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"


[[tool.poetry.source]]
name = "pyg_cu124"
url = "https://data.pyg.org/whl/torch-2.5.0+cu124.html"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
